feat: update CORS configuration to use allowed origin patterns and simplify settings